syntax = "proto3";

package common;

option java_multiple_files = true;
option java_package = "com.nitb.common.grpc";
option java_outer_classname = "CommonProto";

enum GroupBy {
  GROUP_BY_UNSPECIFIED = 0;
  WEEK = 1;
  MONTH = 2;
  YEAR = 3;
}

message ActionResponse {
  bool success = 1;
  string message = 2;
}
